cmd/parser.output

state 0
	$accept: .program $end 
	program: .    (1)

	.  reduce 1 (src line 32)

	program  goto 1

state 1
	$accept:  program.$end 
	program:  program.statement 

	$end  accept
	NUMBER  shift 6
	IDENTIFIER  shift 7
	LET  shift 10
	IF  shift 11
	'-'  shift 9
	'('  shift 8
	.  error

	statement  goto 2
	expression  goto 3
	assignment  goto 4
	control_flow  goto 5

state 2
	program:  program statement.    (2)

	.  reduce 2 (src line 33)


state 3
	statement:  expression.SEPARATOR 
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	SEPARATOR  shift 12
	LE  shift 17
	GE  shift 18
	EQ  shift 19
	NE  shift 20
	OR  shift 21
	AND  shift 22
	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  error


state 4
	statement:  assignment.SEPARATOR 

	SEPARATOR  shift 23
	.  error


state 5
	statement:  control_flow.    (5)

	.  reduce 5 (src line 39)


state 6
	expression:  NUMBER.    (8)

	.  reduce 8 (src line 47)


state 7
	expression:  IDENTIFIER.    (9)

	.  reduce 9 (src line 49)


state 8
	expression:  '('.expression ')' 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 24

state 9
	expression:  '-'.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 25

state 10
	assignment:  LET.IDENTIFIER ASSIGN expression 

	IDENTIFIER  shift 26
	.  error


state 11
	control_flow:  IF.'(' expression ')' '{' statements '}' 
	control_flow:  IF.'(' expression ')' '{' statements '}' ELSE '{' statements '}' 

	'('  shift 27
	.  error


state 12
	statement:  expression SEPARATOR.    (3)

	.  reduce 3 (src line 36)


state 13
	expression:  expression '+'.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 28

state 14
	expression:  expression '-'.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 29

state 15
	expression:  expression '*'.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 30

state 16
	expression:  expression '/'.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 31

state 17
	expression:  expression LE.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 32

state 18
	expression:  expression GE.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 33

state 19
	expression:  expression EQ.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 34

state 20
	expression:  expression NE.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 35

state 21
	expression:  expression OR.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 36

state 22
	expression:  expression AND.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 37

state 23
	statement:  assignment SEPARATOR.    (4)

	.  reduce 4 (src line 38)


state 24
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  '(' expression.')' 

	LE  shift 17
	GE  shift 18
	EQ  shift 19
	NE  shift 20
	OR  shift 21
	AND  shift 22
	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	')'  shift 38
	.  error


state 25
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  '-' expression.    (21)

	.  reduce 21 (src line 61)


state 26
	assignment:  LET IDENTIFIER.ASSIGN expression 

	ASSIGN  shift 39
	.  error


state 27
	control_flow:  IF '('.expression ')' '{' statements '}' 
	control_flow:  IF '('.expression ')' '{' statements '}' ELSE '{' statements '}' 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 40

state 28
	expression:  expression.'+' expression 
	expression:  expression '+' expression.    (10)
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'*'  shift 15
	'/'  shift 16
	.  reduce 10 (src line 50)


state 29
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression '-' expression.    (11)
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'*'  shift 15
	'/'  shift 16
	.  reduce 11 (src line 51)


state 30
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression '*' expression.    (12)
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	.  reduce 12 (src line 52)


state 31
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression '/' expression.    (13)
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	.  reduce 13 (src line 53)


state 32
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression LE expression.    (14)
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 14 (src line 54)


state 33
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression GE expression.    (15)
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 15 (src line 55)


state 34
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression EQ expression.    (16)
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 16 (src line 56)


state 35
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression NE expression.    (17)
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 17 (src line 57)


state 36
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression OR expression.    (18)
	expression:  expression.AND expression 

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 18 (src line 58)


state 37
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  expression AND expression.    (19)

	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 19 (src line 59)


state 38
	expression:  '(' expression ')'.    (20)

	.  reduce 20 (src line 60)


state 39
	assignment:  LET IDENTIFIER ASSIGN.expression 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	'-'  shift 9
	'('  shift 8
	.  error

	expression  goto 41

state 40
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	control_flow:  IF '(' expression.')' '{' statements '}' 
	control_flow:  IF '(' expression.')' '{' statements '}' ELSE '{' statements '}' 

	LE  shift 17
	GE  shift 18
	EQ  shift 19
	NE  shift 20
	OR  shift 21
	AND  shift 22
	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	')'  shift 42
	.  error


state 41
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LE expression 
	expression:  expression.GE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	assignment:  LET IDENTIFIER ASSIGN expression.    (22)

	LE  shift 17
	GE  shift 18
	EQ  shift 19
	NE  shift 20
	OR  shift 21
	AND  shift 22
	'+'  shift 13
	'-'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 22 (src line 64)


state 42
	control_flow:  IF '(' expression ')'.'{' statements '}' 
	control_flow:  IF '(' expression ')'.'{' statements '}' ELSE '{' statements '}' 

	'{'  shift 43
	.  error


state 43
	control_flow:  IF '(' expression ')' '{'.statements '}' 
	control_flow:  IF '(' expression ')' '{'.statements '}' ELSE '{' statements '}' 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	LET  shift 10
	IF  shift 11
	'-'  shift 9
	'('  shift 8
	.  error

	statements  goto 44
	statement  goto 45
	expression  goto 3
	assignment  goto 4
	control_flow  goto 5

state 44
	control_flow:  IF '(' expression ')' '{' statements.'}' 
	control_flow:  IF '(' expression ')' '{' statements.'}' ELSE '{' statements '}' 

	'}'  shift 46
	.  error


state 45
	statements:  statement.statements 
	statements:  statement.    (7)

	NUMBER  shift 6
	IDENTIFIER  shift 7
	LET  shift 10
	IF  shift 11
	'-'  shift 9
	'('  shift 8
	.  reduce 7 (src line 44)

	statements  goto 47
	statement  goto 45
	expression  goto 3
	assignment  goto 4
	control_flow  goto 5

state 46
	control_flow:  IF '(' expression ')' '{' statements '}'.    (23)
	control_flow:  IF '(' expression ')' '{' statements '}'.ELSE '{' statements '}' 

	ELSE  shift 48
	.  reduce 23 (src line 68)


state 47
	statements:  statement statements.    (6)

	.  reduce 6 (src line 42)


state 48
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE.'{' statements '}' 

	'{'  shift 49
	.  error


state 49
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{'.statements '}' 

	NUMBER  shift 6
	IDENTIFIER  shift 7
	LET  shift 10
	IF  shift 11
	'-'  shift 9
	'('  shift 8
	.  error

	statements  goto 50
	statement  goto 45
	expression  goto 3
	assignment  goto 4
	control_flow  goto 5

state 50
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{' statements.'}' 

	'}'  shift 51
	.  error


state 51
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{' statements '}'.    (24)

	.  reduce 24 (src line 70)


27 terminals, 7 nonterminals
25 grammar rules, 52/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
56 working sets used
memory: parser 33/120000
41 extra closures
160 shift entries, 1 exceptions
23 goto entries
11 entries saved by goto default
Optimizer space used: output 114/120000
114 table entries, 23 zero
maximum spread: 27, maximum offset: 49
